--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ![](files/lab_intro.png){.hero-img}
 
-**The Communication and Emerging Media (CEM[kem]) Lab** is a collaborative research group that investigates the role of emerging media in the political communication landscape of the 21st century. Based in the [Department of Communication at the University at Buffalo](http://www.buffalo.edu/cas/communication.html) and the [Department of Communication at the University of Connecticut](https://comm.uconn.edu/), the CEM Lab is committed to facilitating faculty-student collaborative research.
+**The Communication and Emerging Media (CEM; pronounced "kem") Lab** is a collaborative research group that investigates the role of emerging media in the political communication landscape of the 21st century. Based in the [Department of Communication at the University at Buffalo](http://www.buffalo.edu/cas/communication.html) and the [Department of Communication at the University of Connecticut](https://comm.uconn.edu/), the CEM Lab is committed to facilitating faculty-student collaborative research.
 
 With emerging media intertwined with almost every aspect of social life, particularly our politics, we are interested in understanding how they shape people's lived experiences. Particularly, we study how people use digital media, including AI and social media platforms, to consume news and political information, discuss and share political content with others, and engage in political processes. Here, we see politics as relevant to almost all facets of our public and private lives, from voting and participation in social movements, to what we purchase and what lifestyle we adopt.   
 
